Add port number generation code. Add support for removing peers from a peer set. Make peer sets function as real sets. Remove some debugging. Use a SQLite database to cache the peer index hashes. Update to meet latest spec of Sandwich. Remove peer data when search or index download fails.